# meal_idea_notifier

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: app.py  meal_api.py  telegram_sender.py  util.py
